--- a/components/Nav/Nav.scss
+++ b/components/Nav/Nav.scss
@@ -26,4 +26,14 @@
   &.display-horizontal {
     padding: 0;
   }
+
+  &.hover-effect {
+    &.orientation-vertical {
+      &:hover {
+        transform: translateX(-5px);
+        transition: all 0.1s ease-in-out;
+        overflow-x: hidden;
+      }
+    }
+  }
 }
