--- a/components/Nav/Nav.scss
+++ b/components/Nav/Nav.scss
@@ -2,19 +2,24 @@
 
 .nav {
   display: inline-flex;
-  flex-direction: column;
 
-  &.display-horizontal {
+  &.orientation-horizontal {
     flex-direction: row;
+    padding: 0 20px;
     justify-content: space-between;
     width: -webkit-fill-available;
-    padding: 0 20px;
+  }
+
+  &.orientation-vertical {
+    flex-direction: column;
+    padding: 20px 0;
+    justify-content: space-between;
   }
 }
 
 .navItem {
   cursor: pointer;
-  padding: 20px 0;
+  padding: 0;
   text-align: right;
   font-family: 'Open Sans', sans-serif;
   white-space: nowrap;
@@ -23,16 +28,18 @@
     color: #ee9102;
   }
 
-  &.display-horizontal {
-    padding: 0;
-  }
-
   &.hover-effect {
     &.orientation-vertical {
       &:hover {
-        transform: translateX(-5px);
+        transform: translateX(-10px);
         transition: all 0.1s ease-in-out;
-        overflow-x: hidden;
+      }
+    }
+
+    &.orientation-horizontal {
+      &:hover {
+        transform: translateY(-5px);
+        transition: all 0.1s ease-in-out;
       }
     }
   }
