--- a/components/TabTracker/TabTracker.scss
+++ b/components/TabTracker/TabTracker.scss
@@ -5,7 +5,7 @@ $translation: attr(translation);
   width: 100%;
   display: flex;
   transition: all 0.4s ease-in-out;
-  transform: translateX(4.5%);
+  transform: translateX(4%);
   border-bottom: solid 2px black;
   margin-bottom: 20px;
 
@@ -20,7 +20,7 @@ $translation: attr(translation);
 
   &.options-2 {
     &.option-2 {
-      transform: translateX(88%);
+      transform: translateX(89%);
     }
   }
 
@@ -29,7 +29,19 @@ $translation: attr(translation);
       transform: translateX(45%);
     }
     &.option-3 {
-      transform: translateX(88%);
+      transform: translateX(89%);
+    }
+  }
+
+  &.options-4 {
+    &.option-2{
+      transform: translateX(31%);
+    }
+    &.option-3 {
+      transform: translateX(59.5%);
+    }
+    &.option-4 {
+      transform: translateX(89%);
     }
   }
 
@@ -40,6 +52,6 @@ $translation: attr(translation);
     height: 0;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
-    border-bottom: 15px solid black;
+    border-bottom: 15px solid #003660;
   }
 }
