--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
-.header {
+.banner {
   background-color: #003660;
   display: flex;
   height: 100px;
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: center;
   overflow-y: visible;
-  min-height: 800px;
+  //min-height: 800px;
 
   @media only screen and (max-width: 1000px) {
     .container {
@@ -42,7 +42,7 @@
 
   .container {
     display: flex;
-    max-width: 60%;
+    max-width: 65%;
     padding-top: 120px;
     overflow: visible;
 
